syntax="proto3";
option go_package="github.com/dadaxiaoxiao/go-pkg/internal/api/user";

message User {
  int64 id =1;
  string name = 2;
}

service UserService {
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
}

message GetByIdRequest {
  int64 id = 1;
}

message GetByIdResponse {
  User user =1;
}